fixes media query alignment for story circles

--- a/pyb/css/style.css
+++ b/pyb/css/style.css
@@ -168,19 +168,18 @@
 
 	}
 
+
 	/*when the screen is between 505px and 910px (largest screen sizes),
 		we want to move the story_circles to the left
 	*/
-	@media only screen and (max-width: 910px){
-
+	@media only screen and (min-width: 706px) and (max-width: 899px){
 		.story_circles{
-			margin-left: 30px;
+			margin-left: 60px;
 		}
-		.row .sm_circles{
+		.row .sm_features{
 			width:100%;
 		}
 	}
-
 	/* when the screen is in middle screen size, 
 		- create line breaks between all blog posts
 		- specially align the story circles with their descriptions
@@ -188,8 +187,12 @@
 		- set the blog divs to be 100% of the width of the view
 	*/
 	@media only screen and (min-width: 506px) and (max-width: 705px){
+		.row .sm_feature{
+			width:50%;
+		}
 		.row .sm_circles{
-			width:100%;
+			height:50px;
+			width:50px;
 		}
 		.story_circles{
 			margin-left: 40%;
@@ -208,11 +211,16 @@
 	*/ 
 	@media only screen and (max-width: 505px){
 
+		.row .sm_feature{
+			width:50%;
+		}
 		.row .sm_circles{
-			width:100%;
+			height: 75px;
+			width: 75px;
+			margin-left:25px;
 		}
 		.story_circles{
-			margin-left: 25%;
+			margin-left: 31%;
 		}
 
 		.row .story_feature{
